# Meme.Sys

./: .gitignore  README.md  bot.py  gpt_api.py  photos  pyproject.toml
memesys/: bot.py  db.py  gpt_api.py
